Task-9/practice/task-service-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: micro-service02
spec:
  replicas: 3
  selector:
    matchLabels:
      app: micro-service02
  template:
    metadata:
      labels:
        app: micro-service02
    spec:
      containers:
      - name: micro-service02
        image: akbargolpa/task9-micro-task-service02-iso
        ports:
        - containerPort: 8001
---
apiVersion: v1
kind: Service
metadata:
  name: micro-service02
spec:
  selector:
    app: micro-service02
  ports:
    - protocol: TCP
      port: 8001
      targetPort: 8001
  type: LoadBalancer
