Task-9/practice/user-service-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: micro-service01
spec:
  replicas: 3
  selector:
    matchLabels:
      app: micro-service01
  template:
    metadata:
      labels:
        app: micro-service01
    spec:
      containers:
      - name: micro-service01
        image: akbargolpa/task9-micro-user-service01-iso
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: micro-service01
spec:
  selector:
    app: micro-service01
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: LoadBalancer
