Task-9/practice/task-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: task-ingress
spec:
  rules:
    - host: users.local
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: micro-service01
                port:
                  number: 8000
    - host: tasks.local
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: micro-service02
                port:
                  number: 8001
